--- a/device/templates/show-data.html
+++ b/device/templates/show-data.html
@@ -12,6 +12,7 @@
 
     </head>
     <body>
+        <div class='container'>
         <div class="row">
             <div class="col">
                 <h1>Device IMEI</h1>
@@ -24,6 +25,9 @@
             </div>
             <div class="col">
                 <h1>Temperature</h1>
+            </div>
+            <div class="col">
+                <h1>Date Time</h1>
             </div>
         </div>
         {% for x in data  %}
@@ -41,9 +45,16 @@
                 <div class='col'>
                     {{x.temperature}}
                 </div>
+                <div class='col'>
+                    {{x.datetime}}
+                </div>
             </div>
         
-        {% endfor %}        
+        {% endfor %}       
+        </div> 
+        <div class='container'>
+            <a href="{% url "get-device" %}">Back</a>
+        </div>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
