--- a/device/templates/show-device.html
+++ b/device/templates/show-device.html
@@ -31,12 +31,12 @@
         
             <div class='row'>
                 <div class='col'>
-                    <a href="{% url 'get-history' device.id  %}">
+                    <a href="{% url 'show-history' device.id  %}">
                         {{device.id}}
                     </a>
                 </div>
                 <div class='col'>
-                    <a href="{% url 'get-history' device.id  %}">
+                    <a href="{% url 'show-history' device.id  %}">
                         {{device.name}}
                     </a>
                 </div>
