--- a/device/templates/show-data.html
+++ b/device/templates/show-data.html
@@ -8,10 +8,11 @@
         <title>IoT device</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-
+        <link rel="stylesheet" href="https://unpkg.com/bootstrap@5.3.3/dist/css/bootstrap.min.css">
+        <link rel="stylesheet" href="https://unpkg.com/bs-brain@2.0.4/components/charts/chart-1/assets/css/chart-1.css">
     </head>
     <body>
+        {{device}}
         <div class='container'>
         <div class="row">
             <div class="col">
@@ -49,15 +50,56 @@
                     {{x.datetime}}
                 </div>
             </div>
-        
+
         {% endfor %}       
         </div> 
-        <div class='container'>
+        <div class='container' style='width:75%'>
             <a href="{% url "show-device" %}">Back</a>
         </div>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
-        
+        <div id="container" style="width: 75%;">
+          <canvas id="population-chart" data-url="{% url 'data-chart' device %}"></canvas>
+        </div>
+      
+        <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js"></script>
+        <script>
+      
+          $(function () {
+      
+            var $populationChart = $("#population-chart");
+            $.ajax({
+              url: $populationChart.data("url"),
+              success: function (data) {
+      
+                var ctx = $populationChart[0].getContext("2d");
+      
+                new Chart(ctx, {
+                  type: 'line',
+                  data: {
+                    labels: data.labels,
+                    datasets: [{
+                      label: 'Population',
+                      backgroundColor: 'blue',
+                      data: data.height
+                    }]          
+                  },
+                  options: {
+                    responsive: true,
+                    legend: {
+                      position: 'top',
+                    },
+                    title: {
+                      display: true,
+                      text: 'Population Bar Chart'
+                    }
+                  }
+                });
+      
+              }
+            });
+      
+          });
+      
+        </script>
     </body>
 </html>
